src/objects/POT_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Clinical_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Appointment</label>
        <referenceTo>Clinical_Appointment__c</referenceTo>
        <relationshipLabel>POT Appointments</relationshipLabel>
        <relationshipName>POT_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Out</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_of_Treatment__c</fullName>
        <label>Plan of Treatment</label>
        <referenceTo>Plan_of_Treatment__c</referenceTo>
        <relationshipLabel>POT Appointments</relationshipLabel>
        <relationshipName>POT_Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POT Appointment</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>POT Apts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POT Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>